--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -31,9 +31,9 @@
 		<div class="row" id="sub-header">
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs">
-					<li role="presentation" class="active"><a href="#">Студенти</a></li>
-					<li role="presentation"><a href="#">Відвідування</a></li>
-					<li role="presentation"><a href="#">Групи</a></li>
+					<li role="presentation" class="active"><a href="{% url "home" %}">Студенти</a></li>
+					<li role="presentation"><a href="/journal">Відвідування</a></li>
+					<li role="presentation"><a href="{% url "groups" %}">Групи</a></li>
 				</ul>
 			</div>
 		</div>
@@ -42,7 +42,7 @@
 			<div class="col-xs-12">
 				<div class="alert alert-warning" role="alert">Студент успішно доданий.</div>
 				<h2 class="head">База Студентів</h2>
-				<a class="btn btn-primary btn-lg head" href="#" role="button">Додати Студента</a>
+				<a class="btn btn-primary btn-lg head" href="{% url "students_add" %}" role="button">Додати Студента</a>
 				<div>
 					<!-- Table of Student -->
 					<table class="table table-hover table-striped">
@@ -61,8 +61,8 @@
 							<tr>
 								<td>1</td>
 								<td><img height="40" width="40" src="./img/SOS.JPG" class="img-circle"></td>
-								<td><a title="Редагувати" href="#">Вейдер</a></td>
-								<td><a title="Редагувати" href="#">Дарт</a></td>
+								<td><a title="Редагувати" href="{% url "students_edit" 1 %}">Вейдер</a></td>
+								<td><a title="Редагувати" href="{% url "students_edit" 1 %}">Дарт</a></td>
 								<td>2123</td>
 								<td>
 									<div class="dropdown">
@@ -72,9 +72,9 @@
 											<span class="caret"></span>
 										</button>
 										<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-											<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Відвідування</a></li>
-											<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Редагувати</a></li>
-											<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Видалити</a></li>
+											<li role="presentation"><a role="menuitem" tabindex="-1" href="/journal/1">Відвідування</a></li>
+											<li role="presentation"><a role="menuitem" tabindex="-1" href="{% url "students_edit" 1 %}">Редагувати</a></li>
+											<li role="presentation"><a role="menuitem" tabindex="-1" href="{% url "students_delete" 1 %}">Видалити</a></li>
 										</ul>
 									</div>
 								</td>
@@ -83,8 +83,8 @@
 							<tr>
 								<td>2</td>
 								<td><img height="40" width="40" src="./img/Mich.JPG" class="img-circle"></td>
-								<td><a title="Редагувати" href="#">Мелфой</a></td>
-								<td><a title="Редагувати" href="#">Люціус</a></td>
+								<td><a title="Редагувати" href="{% url "students_edit" 2 %}">Мелфой</a></td>
+								<td><a title="Редагувати" href="{% url "students_edit" 2 %}">Люціус</a></td>
 								<td>2124</td>
 								<td>
 									<div class="dropdown">
@@ -94,9 +94,9 @@
 											<span class="caret"></span>
 										</button>
 										<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-											<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Відвідування</a></li>
-											<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Редагувати</a></li>
-											<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Видалити</a></li>
+											<li role="presentation"><a role="menuitem" tabindex="-1" href="/journal/2">Відвідування</a></li>
+											<li role="presentation"><a role="menuitem" tabindex="-1" href="{% url "students_edit" 2 %}">Редагувати</a></li>
+											<li role="presentation"><a role="menuitem" tabindex="-1" href="{% url "students_delete" 2 %}">Видалити</a></li>
 										</ul>
 									</div>
 								</td>
@@ -105,8 +105,8 @@
 							<tr>
 								<td>3</td>
 								<td><img height="40" width="40" src="./img/Kir.JPG" class="img-circle"></td>
-								<td><a title="Редагувати" href="#">Бендер</a></td>
-								<td><a title="Редагувати" href="#">Остап</a></td>
+								<td><a title="Редагувати" href="{% url "students_edit" 3 %}">Бендер</a></td>
+								<td><a title="Редагувати" href="{% url "students_edit" 3 %}">Остап</a></td>
 								<td>2125</td>
 								<td>
 									<div class="dropdown">
@@ -116,9 +116,9 @@
 											<span class="caret"></span>
 										</button>
 										<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-											<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Відвідування</a></li>
-											<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Редагувати</a></li>
-											<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Видалити</a></li>
+											<li role="presentation"><a role="menuitem" tabindex="-1" href="/journal/3">Відвідування</a></li>
+											<li role="presentation"><a role="menuitem" tabindex="-1" href="{% url "students_edit" 3 %}">Редагувати</a></li>
+											<li role="presentation"><a role="menuitem" tabindex="-1" href="{% url "students_delete" 3 %}">Видалити</a></li>
 										</ul>
 									</div>
 								</td>
