--- a/students/templates/students/students_list.html
+++ b/students/templates/students/students_list.html
@@ -10,6 +10,7 @@
 	<a class="btn btn-primary btn-lg head" href="{% url "students_add" %}" role="button">Додати Студента</a>
 		<div>
 			<!-- Table of Student -->
+			{% if students %}
 			<table class="table table-hover table-striped">
 				<thead>
 					<tr>
@@ -49,25 +50,8 @@
 				</tbody>
 			</table>
 			<!-- Panel of Navigation -->
-			<nav>
-				<ul class="pagination">
-					<li>
-						<a href="#" aria-label="Previous">
-							<span aria-hidden="true">&laquo;</span>
-						</a>
-					</li>
-					<li><a href="#">1</a></li>
-					<li class="active"><a href="#">2</a></li>
-					<li><a href="#">3</a></li>
-					<li><a href="#">4</a></li>
-					<li><a href="#">5</a></li>
-					<li>
-						<a href="#" aria-label="Next">
-							<span aria-hidden="true">&raquo;</span>
-						</a>
-					</li>
-				</ul>
-			</nav>
+			{% include "students/pagination.html" %}
+		{% else %}<p>У базі ще немає студентів</p>{% endif %}
 		</div>
-	{% endblock content %}	
+	{% endblock content %}
 
