--- a/students/templates/students/base.html
+++ b/students/templates/students/base.html
@@ -9,7 +9,7 @@
 		value="Система Обліку Студентів Навчального Закладу" />
 	<link rel="stylesheet"
 		href="https://cdn.jsdelivr.net/bootstrap/3.3.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="{% static "css/main.css" %}">
+	<link rel="stylesheet" href="{{ PORTAL_URL }}{% static "css/main.css" %}">
 	
 	{% block extra_css %}{% endblock extra_css %}
 	</head>			
@@ -36,9 +36,9 @@
 		<div class="row" id="sub-header">
 			<div class="col-xs-12">
 				<ul class="nav nav-tabs">
-					<li role="presentation" class="active"><a href="{% url "home" %}">Студенти</a></li>
-					<li role="presentation"><a href="{% url 'journal' %}">Відвідування</a></li>
-					<li role="presentation"><a href="{% url "groups" %}">Групи</a></li>
+					<li role="presentation" {% if request.path == "/" %} class="active" {% endif %}><a href="{% url "home" %}">Студенти</a></li>
+					<li role="presentation" {% if "/journal" in request.path %} class="active" {% endif %}><a href="{% url 'journal' %}">Відвідування</a></li>
+					<li role="presentation" {% if "/groups" in request.path %} class="active" {% endif %}><a href="{% url "groups" %}">Групи</a></li>
 				</ul>
 			</div>
 		</div>
@@ -54,7 +54,7 @@
 		</div>
 		<!-- Footer -->
 		<div class="row" id="footer">
-			<div class="col-xs-12">&copy; 2014 Сервіс Обліку Студентів</div>
+			<div class="col-xs-12">{% block footer %} &copy; 2014 Сервіс Обліку Студентів {%endblock footer %}</div>
 		</div>
 	</div>
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
