--- a/students/templates/students/groups_list.html
+++ b/students/templates/students/groups_list.html
@@ -9,6 +9,7 @@
 {% block content %}
 	<a class="btn btn-primary btn-lg head" href="{% url "students_add" %}" role="button">Додати Групу</a>
 		<div>
+			{% if groups %}
 			<!-- Table of Student -->
 			<table class="table table-hover table-striped">
 				<thead>
@@ -24,8 +25,8 @@
 					{% for group in groups %}
 					<tr>
 						<td>{{ forloop.counter }}</td>
-						<td><a title="Редагувати" href="#">{{ group.name_group }}</a></td>
-						<td><a title="Редагувати" href="#">{{ group.leader }}</a></td>
+						<td><a title="Редагувати" href="{% url 'groups_edit' group.id %}">{{ group.name_group }}</a></td>
+						<td><a title="Редагувати" href="{% url 'students_edit' group.leader.id %}">{{ group.leader.name }}</a></td>
 						<td>
 							<div class="dropdown">
 								<button class="btn btn-default dropdown-toggle" 
@@ -34,7 +35,6 @@
 									<span class="caret"></span>
 								</button>
 								<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-									<li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'journal' %}">Відвідування</a></li>
 									<li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'groups_edit' group.id %}">Редагувати</a></li>
 									<li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'groups_delete' group.id %}">Видалити</a></li>
 								</ul>
@@ -45,17 +45,8 @@
 				</tbody>
 			</table>
 			<!-- Panel of Navigation -->
-			<nav>
-			  <ul class="pagination">
-				<li><a href="#">1</a></li>
-				<li><a class="#" href="#">2</a></li>
-				<li>
-				  <a href="#" aria-label="Next">
-					<span aria-hidden="true">Далі</span>
-				  </a>
-				</li>
-			  </ul>
-			</nav>
+			{% include "students/pagination.html" %}
+			{% else %}<p>У базі ще немає груп</p>{% endif %}
 		</div>
 	{% endblock content %}	
 
